--- a/src/Components/Count/Count.module.scss
+++ b/src/Components/Count/Count.module.scss
@@ -10,6 +10,10 @@
   position: relative;
   .Wrapper {
     display: flex;
+    align-items: center;
+    @media (max-width: 768px) {
+      flex-direction: column;
+    }
   }
   ul {
     width: 100%;
@@ -21,6 +25,9 @@
       padding-bottom: 40px;
       border-bottom: 1px solid #000;
       width: 70%;
+      @media (max-width: 768px) {
+        width: 100%;
+      }
       &:last-child {
         border-bottom: none;
         padding-bottom: 0;
@@ -80,8 +87,17 @@
     padding: 60px;
     width: 640px;
     border-radius: 16px;
+    @media (max-width: 768px) {
+      background-size: 30%;
+    }
+    @media (max-width: 640px) {
+      width: 100%;
+    }
     h5 {
       font-size: 60px;
+      @media (max-width: 768px) {
+        font-size: 40px;
+      }
     }
     span {
       font-size: 16px;
@@ -92,6 +108,12 @@
       font-size: 20px;
       margin-bottom: 28px;
       width: 70%;
+      @media (max-width: 980px) {
+        width: 100%;
+      }
+      @media (max-width: 768px) {
+        font-size: 18px;
+      }
     }
     .enquiry {
       cursor: pointer;
