--- a/src/Components/Footer/Footer.module.scss
+++ b/src/Components/Footer/Footer.module.scss
@@ -5,6 +5,9 @@ footer {
   .Wrapper {
     display: flex;
     justify-content: space-between;
+    @media (max-width: 640px) {
+      flex-direction: column;
+    }
   }
   img {
     width: 30%;
@@ -26,6 +29,7 @@ footer {
     display: flex;
     justify-content: space-between;
     flex-direction: column;
+
     h6 {
       display: block;
       text-align: right;
@@ -39,14 +43,37 @@ footer {
           color: $blue-color;
         }
       }
+      @media (max-width: 640px) {
+        text-align: center;
+        margin-top: 14px;
+      }
     }
     .contct_box {
       display: flex;
+      @media (max-width: 980px) {
+        flex-direction: column;
+        text-align: right;
+      }
+      @media (max-width: 640px) {
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+      }
       .contact {
         color: #709be6 !important;
         display: block;
+        @media (max-width: 640px) {
+          margin-top: 40px;
+        }
         &:last-child {
           margin-left: 40px;
+          @media (max-width: 980px) {
+            margin-left: 40px;
+            margin-top: 8px;
+          }
+          @media (max-width: 640px) {
+            margin-left: 0;
+          }
         }
         a {
           color: #fff;
