--- a/src/Components/Header/Header.module.scss
+++ b/src/Components/Header/Header.module.scss
@@ -5,6 +5,7 @@
   position: fixed;
   width: 85vw;
   left: 50%;
+  top: -15px;
   transform: translate(-50%, 50%);
   z-index: 99;
   box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
@@ -39,6 +40,9 @@
       margin: 0 20px;
       font-size: 20px;
       background: transparent;
+      svg {
+        fill: #000;
+      }
     }
     .payment_btn {
       background-color: $green-color;
@@ -56,6 +60,9 @@
       font-size: 30px;
       background-color: transparent;
       display: none;
+      svg {
+        fill: #000;
+      }
       @media (max-width: 980px) {
         display: block;
       }
