--- a/src/Components/Offer/Offer.module.scss
+++ b/src/Components/Offer/Offer.module.scss
@@ -5,9 +5,13 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    @media (max-width: 980px) {
+      flex-direction: column;
+    }
   }
   .image_box {
     width: 60%;
+
     img {
       width: 100%;
       display: block;
@@ -16,11 +20,24 @@
   .content_box {
     width: 50%;
     margin-left: 80px;
+
+    @media (max-width: 980px) {
+      width: 100%;
+      margin-left: 0;
+      margin-top: 40px;
+    }
     h4 {
       font-size: 46px;
       width: 70%;
-      font-weight: 500;
+      font-weight: 400;
       margin-bottom: 20px;
+      @media (max-width: 980px) {
+        font-size: 36px;
+      }
+      @media (max-width: 640px) {
+        width: 100%;
+        font-size: 30px;
+      }
     }
     p {
       font-size: 16px;
